Add, View & Edit Warehouse

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
-    <title>"React Reselect Saga"</title>
+    <title>Baseweb</title>
   </head>
   <body>
     <div id="root" />
